# 3dTetris

./: .gitignore  LICENSE  README.md
OriginalProject/: 3dTetris.cpp  3dTetrisBinaries.tar  CMakeLists.txt  README.md  conanfile.txt
OriginalProject/conan_profiles/: clang.txt
OriginalProject/src/: 3dTetris.cpp  CMakeLists.txt
OriginalProject/tst/: 3dTetrisTest.cpp  CMakeLists.txt
RefactoredProject/: CMakeLists.txt  ClassDiagram.iuml  CreateCMakeBuildDirectory.py  Design.md  Design.txt  README.md  SequenceDiagram.iuml  conanfile.txt
RefactoredProject/src/: 3dTetris.cpp  CMakeLists.txt
RefactoredProject/src/game/: CMakeLists.txt  Game.cpp
RefactoredProject/src/game/include/: Game.h
RefactoredProject/src/grid/: CMakeLists.txt  Grid.cpp  Grid.h  GridFactory.cpp
RefactoredProject/src/grid/include/: GridFactory.h  IGrid.h
RefactoredProject/src/logger/: CMakeLists.txt  Logger.cpp  Logger.h  LoggerFactory.cpp
RefactoredProject/src/logger/include/: ILogger.h  LoggerFactory.h
RefactoredProject/src/main/: CMakeLists.txt  main.cpp
RefactoredProject/src/main-window/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindowFactory.cpp  RenderSceneCallback.cpp  RenderSceneCallback.h
RefactoredProject/src/main-window/include/: IMainWindow.h  MainWindowFactory.h
RefactoredProject/tst/: 3dTetrisTest.cpp  CMakeLists.txt
RefactoredProject/tst/GameTests/: CMakeLists.txt  GameTests.cpp
RefactoredProject/tst/IntegrationTests/: CMakeLists.txt  IntegrationTests.cpp
RefactoredProject/tst/LoggerTests/: CMakeLists.txt  LoggerTests.cpp
RefactoredProject/tst/TestUtils/: CMakeLists.txt  GridMock.h  LoggerMock.h  MainWindowMock.h
